# pii-anon

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile.benchmark  Makefile  README.md  benchmark-diagnostics.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
artifacts/benchmarks/: benchmark-combined.json  benchmark-raw-eval_framework_v1.csv  benchmark-raw-llm_long_context_tracking.csv  benchmark-raw.csv  benchmark-results-eval_framework_v1.json  benchmark-results-llm_long_context_tracking.json  benchmark-results.json  benchmark-summary.md  continuity-gate-report.md  continuity-results.json  floor-baseline.json  floor-baseline.v1.0.0.json  floor-gate-report-eval_framework_v1.md  floor-gate-report-llm_long_context_tracking.md  floor-gate-report.md  runtime-preflight.json
docs/: README.md  api-reference.md  autoresearch-integration.md  benchmark-enhancement-roadmap.md  benchmark-summary.md  complex-mode-example.md  configuration.md  dependencies-and-platforms.md  engine-plugin-guide.md  evaluate-your-pipeline.md  evidence-ledger.md  extend-swarm.md  long-context-entity-tracking.md  pii-rate-elo.md  quickstart.md  release-guide.md  swarm-architecture.md  tutorial-llm-pipeline.md
notebooks/: quickstart.ipynb
pdlc-artifacts/: MANIFEST.md
pdlc-artifacts/design/: moe-guarantee-analysis.md
pdlc-artifacts/development/: ROUND3_EVAL_SUMMARY.md  profile-eval-round2.txt  profile-eval.json  round1-eval.txt  round3-eval.txt
pdlc-artifacts/ensemble-v2/: MANIFEST.md
pdlc-artifacts/ensemble-v2/discovery/: discovery-report.md
pdlc-artifacts/ensemble-v2/testing/: evaluation-results.md
pdlc-artifacts/speed-boost/: MANIFEST.md
pdlc-artifacts/swarm/: MANIFEST.md
pdlc-artifacts/swarm/design/: design-critique.md  final-architecture.md
pdlc-artifacts/swarm/discovery/: confidence-analysis.md  discovery-report.md  engine-correlation.md  precision-diagnosis.json  precision-diagnosis.md
pdlc-artifacts/swarm/requirements/: functional-requirements.md  non-functional-requirements.md  requirements-document.md
results/composite/: composite_evaluation_results.json  composite_leaderboard.csv  composite_leaderboard.json  composite_leaderboard.md
scripts/: _env_setup.py  _progress.py  aggregate_progress.py  benchmark_doctor.py  bootstrap_dev.sh  check_benchmark_runtime.py  check_package_size.py  check_readme_benchmark.py  diagnose_engine_correlation.py  diagnose_swarm_precision.py  discover_oss_competitors.py  evaluate_per_profile.py  generate_benchmark_dataset.py  generate_pii_anon_eval_v1.py  profile_hot_paths.py  render_benchmark_summary.py  render_complex_mode_example.py  render_marketing_narrative.py  render_pii_rate_elo_value.py  run_cloud_benchmark.sh  run_cloud_benchmark_parallel.sh  run_competitor_benchmark.py  run_composite_evaluation.py  run_continuity_benchmark.py  run_full_benchmark.py  run_full_calibration.py  run_publish_grade_suite.py  train_swarm.py
src/pii_anon/: __init__.py  bridge.py  cli.py  errors.py  fusion.py  moe.py  moe_similarity.py  moe_sync.py  orchestrator.py  pipeline.py  swarm.py  swarm_datasets.py  swarm_learner.py  types.py
src/pii_anon/benchmarks/: __init__.py  datasets.py  runner.py
src/pii_anon/calibration/: __init__.py  dominance.py  offline.py  online.py  store.py
src/pii_anon/config/: __init__.py  manager.py  (+1 more)
tests/: .gitignore  README.md  conftest.py  test_async.py  test_benchmark_runtime_preflight.py  test_benchmark_summary_render.py  test_benchmarks.py  test_benchmarks_dataset_schema.py  test_bridge.py  test_calibration_metrics.py  test_cli.py  test_cli_extended.py  test_competitor_benchmark.py  test_competitor_compare_coverage.py  test_competitor_compare_unit.py  test_competitor_composite.py  test_competitor_floor_gate.py  test_composite_extended.py  test_composite_metric.py  test_composite_tier3.py  test_config.py  test_config_env_prefix.py  test_config_extended.py  test_continuity_benchmark.py  test_coverage_boost.py  test_coverage_gaps.py  test_coverage_validator.py  test_data_formats.py  test_dataset_statistics.py  test_dependency_instructions_docs.py  test_elo_engine.py  test_elo_rating.py  test_engine_adapters_extended.py  test_engine_discovery.py  test_engines.py  test_errors.py  test_eval_framework_compliance.py  test_eval_framework_dataset.py  test_eval_framework_dataset_schema_extra.py  test_eval_framework_evaluation.py  (+72 more)
tests/integration/: test_end_to_end.py
tests/performance/: test_perf_sla.py
(+94 files in other folders)
